test/TestPhases/typechecker/invalid/ReturnInVoid.blc
module ReturnInVoid

function calc()
    return 9
end

activity main ()()
    calc()
    await false
end
